# mt5_trader

./: README.md  pyproject.toml
ap_mt5/: client.py  config.py  main.py  model.py  order_open.py
